# ffmpeg_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
ffmpeg_mcp/: __init__.py  main.py
ffmpeg_mcp/utils/: utils.py
